--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ androidxNavigation = "2.8.9"
 # Hilt
 hilt = "2.51"
 androidxHiltNavigationCompose = "1.2.0"
+# Dagger 2
+dagger = "2.50"
 # AndroidX
 activity_version = "1.10.1"
 fragment_version = "1.8.6"
@@ -40,6 +42,11 @@ material-icon-extended = { group = "androidx.compose.material", name="material-i
 compose-animation = { group = "androidx.compose.animation", name="animation", version.ref = "composeAnimation" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidxNavigation" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidxNavigation" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
+
+# Dagger
+dagger-core = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
+dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
 
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
